--- a/_posts/en/pages/2015-10-04-blog.html
+++ b/_posts/en/pages/2015-10-04-blog.html
@@ -3,7 +3,9 @@ layout: blog
 title: Blogg
 ---
 <div id="main" role="main">
-	{% for post in site.posts %}
+
+	{% assign posts=site.posts | where:"lang", page.lang | where:"type", posts %}
+	{% for post in posts %}
 	<a href="{{ post.url }}">
 		<h2>{{ post.title }}</h2>
 		<h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
