Working with colors

--- a/_posts/en/pages/2015-10-03-contact.html
+++ b/_posts/en/pages/2015-10-03-contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 ---
 <p>
-Använd formuläret nedan för att kontakta mig.
+Use the form bellow to contact me.
 </p>
 <form id="contactform" action="https://formspree.io/adam@sernheim.com" method="POST">
 <input class="form-controll" type="text" name="name" placeholder="Ditt namn">
