--- a/_posts/sv/pages/2015-10-04-blogg.html
+++ b/_posts/sv/pages/2015-10-04-blogg.html
@@ -1,9 +1,11 @@
 ---
 layout: blog
 title: Blogg
+lang: sv
 ---
 <div id="main" role="main">
-	{% for post in site.posts %}
+	{% assign posts=site.posts | where:"lang", page.lang | where:"type", posts %}
+	{% for post in posts %}
 	<a href="{{ post.url }}">
 		<h2>{{ post.title }}</h2>
 		<h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
