--- a/_posts/sv/pages/2015-10-04-blogg.html
+++ b/_posts/sv/pages/2015-10-04-blogg.html
@@ -4,11 +4,12 @@ title: Blogg
 lang: sv
 ---
 <div id="main" role="main">
-	{% assign posts=site.posts | where:"lang", page.lang | where:"type", posts %}
-	{% for post in posts %}
+	{% for post in site.posts %}
+  {% if post.lang == page.lang and post.type == "posts" %}
 	<a href="{{ post.url }}">
 		<h2>{{ post.title }}</h2>
 		<h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
 	</a>
+  {% endif %}
 	{% endfor %}
 </div>
