Added thanks page and removed post

--- a/_posts/en/pages/2015-10-03-contact.html
+++ b/_posts/en/pages/2015-10-03-contact.html
@@ -6,10 +6,11 @@ title: Contact
 Use the form bellow to contact me.
 </p>
 <form id="contactform" action="https://formspree.io/adam@sernheim.com" method="POST">
-<input class="form-controll" type="text" name="name" placeholder="Ditt namn">
-<input class="form-controll" type="email" name="_replyto" placeholder="Din epost">
-<textarea class="form-controll" name="message" placeholder="Ditt meddelande"></textarea>
-<input class="btn" type="submit" value="Skicka">
+<input class="form-controll" type="text" name="name" placeholder="Your name">
+<input class="form-controll" type="email" name="_replyto" placeholder="Your email">
+<textarea class="form-controll" name="message" placeholder="Your message"></textarea>
+<input class="btn" type="submit" value="Send">
 <input type="text" name="_gotcha" style="display:none" />
+<input type="hidden" name="_next" value="//thanks/" />
 <input type="hidden" name="_subject" value="Website contact" />
 </form>
