Added thanks page and removed post

--- a/_posts/en/pages/2015-10-03-contact.html
+++ b/_posts/en/pages/2015-10-03-contact.html
@@ -11,6 +11,6 @@ Use the form bellow to contact me.
 <textarea class="form-controll" name="message" placeholder="Your message"></textarea>
 <input class="btn" type="submit" value="Send">
 <input type="text" name="_gotcha" style="display:none" />
-<input type="hidden" name="_next" value="//thanks/" />
+<input type="hidden" name="_next" value="/thanks/" />
 <input type="hidden" name="_subject" value="Website contact" />
 </form>
