--- a/_posts/sv/pages/2015-10-03-kontakta.html
+++ b/_posts/sv/pages/2015-10-03-kontakta.html
@@ -12,6 +12,6 @@ Använd formuläret nedan för att kontakta mig.
 <textarea class="form-controll" name="message" placeholder="Ditt meddelande"></textarea>
 <input class="btn" type="submit" value="Skicka">
 <input type="text" name="_gotcha" style="display:none" />
-<input type="hidden" name="_next" value="//tack/" />
+<input type="hidden" name="_next" value="/tack/" />
 <input type="hidden" name="_subject" value="Website contact" />
 </form>
