--- a/_posts/en/pages/2015-10-04-blog.html
+++ b/_posts/en/pages/2015-10-04-blog.html
@@ -1,14 +1,6 @@
 ---
-layout: blog
+layout: blog_list
 title: Blogg
+ref: blog
+lang: en
 ---
-<div id="main" role="main">
-
-	{% assign posts=site.posts | where:"lang", page.lang | where:"type", posts %}
-	{% for post in posts %}
-	<a href="{{ post.url }}">
-		<h2>{{ post.title }}</h2>
-		<h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
-	</a>
-	{% endfor %}
-</div>
