--- a/_posts/sv/pages/2015-10-04-blogg.html
+++ b/_posts/sv/pages/2015-10-04-blogg.html
@@ -1,15 +1,6 @@
 ---
-layout: blog
+layout: blog_list
 title: Blogg
+ref: blog
 lang: sv
 ---
-<div id="main" role="main">
-	{% for post in site.posts %}
-  {% if post.lang == page.lang and post.type == "posts" %}
-	<a href="{{ post.url }}">
-		<h2>{{ post.title }}</h2>
-		<h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
-	</a>
-  {% endif %}
-	{% endfor %}
-</div>
